# surenaV_core

./: .gitignore  LICENSE  README.md
gait_planner/: CMakeLists.txt
gait_planner/config/: walk_config.json
gait_planner/include/: GaitManager.h  Robot.h
gait_planner/src/: GaitManager.cpp  Robot.cpp
gait_planner/srv/: KeyboardWalkSeq.srv  Trajectory.srv
hand_planner/: CMakeLists.txt  package.xml
hand_planner/config/: finger_scenarios.json
hand_planner/include/: FingerControl.h  HandManager.h  S5_hand.h  hand_motion_utils.h  handwriting.h
hand_planner/src/: FingerControl.cpp  HandManager.cpp  S5_hand.cpp  hand_motion_utils.cpp  handwriting.cpp
hand_planner/srv/: FingerControl.srv  FingerScenario.srv  KeyboardJog.srv  MoveHandGeneral.srv  MoveMotor.srv  PickAndMove.srv
keyboard_teleop/: CMakeLists.txt
robot_manager/: CMakeLists.txt  package.xml
robot_manager/config/: scenarios.yaml
robot_manager/include/: RobotManager.h
robot_manager/src/: RobotManager.cpp
simulation/surenaV_description/urdf/: surenaV.urdf
simulation/surenaV_gazebo/config/: surenaV_control.yaml
simulation/surenaV_gazebo/src/: gazebo_bridge.cpp
surena_eth/src/: epos.cpp  epos.h  qnode.cpp  qnode.h  robot.cpp  robot.h
